test/files/neg/parser-errors.check
parser-errors.scala:1: error: lazy values may not be abstract
abstract class A1 { lazy val foo: Int }
                             ^
parser-errors.scala:2: error: pattern definition may not be abstract
abstract class A2 { val Some(x)       }
                            ^
parser-errors.scala:3: error: an explicit type is required for default initialization
abstract class A3 { var x = _         }
                        ^
parser-errors.scala:4: error: only vars are eligible for default initialization
abstract class A4 { val x: Int = _    }
                        ^
parser-errors.scala:5: error: pattern definition is ineligible for default initialization
abstract class A5 { var Some(x) = _   }
                            ^
5 errors found
